--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jiayu Wang(王嘉宇)"
-description              : "Undergraduates of Xi'an Jiaotong University"
+description              : 
 repository               : "https://github.com/JiayuuWang/JiayuuWang.github.io"
 google_scholar_stats_use_cdn : true
 
